@@ -217,7 +217,7 @@ Register your own I/O poller on a carrier via `registerPinnedPoller`. The poller
 var scheduler = EventLoopSchedulerGroup.instance().scheduler(0);
 
 CompletionStage<Void> termination = scheduler.registerPinnedPoller(
-    () -> false,  // spinning — never sleeps, must return false (see below)
+    () -> {},  // spinning — never sleeps, wakeup is a no-op
     () -> {
         while (!shutdown) {
             int events = doPollNonBlocking();
@@ -238,45 +238,52 @@ A pinned poller has three responsibilities:
    - **`hadIoWork=true`**: the poller has I/O to process. The scheduler only yields for local VT preemption — no work stealing, because the carrier is doing useful work.
    - **`hadIoWork=false`**: the poller is idle. The scheduler may attempt to steal work from an overloaded sibling (if [work stealing](#work-stealing-experimental) is enabled), helping reduce tail latency when load is uneven.
 
-   The scheduler heartbeat is always updated on every `maybeYield` call regardless of `hadIoWork`. What `hadIoWork` controls is the **steal path**: when `false`, the scheduler may steal from an overloaded sibling; when `true`, stealing is suppressed because the carrier is doing useful I/O work. Passing `true` incorrectly would prevent the carrier from ever stealing, while passing `false` incorrectly would make the carrier steal when it should be doing I/O. **Get this right** — it's the feedback loop between the poller and the scheduler.
+   What `hadIoWork` controls is the **steal path**: when `false`, the scheduler may steal from an overloaded sibling; when `true`, stealing is suppressed because the carrier is doing useful I/O work. Passing `true` incorrectly would prevent the carrier from ever stealing, while passing `false` incorrectly would make the carrier steal when it should be doing I/O. **Get this right** — it's the feedback loop between the poller and the scheduler.
+
+   A spinning poller (one that never blocks) will never enter PARKED state, so the nSearching directed-steal protocol cannot target it. But it participates in the pull path — `tryStealing` in `maybeYield` probes siblings when `hadIoWork=false`. It can also be stolen FROM via the directed path (another carrier wakes an idle sibling to steal from this carrier's queue via `signalWorkFor`).
 
 2. **Terminate.** The poller slot is freed when the body `Runnable` returns (via try-finally internally). The returned `CompletionStage` completes after cleanup, so callers can wait for the slot to be available again.
 
-3. **Report wakeup state honestly.** The wakeup `BooleanSupplier` must return `true` if the poller was observed sleeping (blocking in kernel I/O) and the wakeup signal was sent, or `false` if the poller was actively running (spinning, processing events). The scheduler uses this to decide whether idle siblings need to be woken for work stealing — a poller that falsely reports "sleeping" when it's actually running can suppress sibling wakeups that would otherwise help an overloaded carrier.
+3. **Handle wakeup signals.** The wakeup `Runnable` is called from any thread when the scheduler needs to interrupt the poller's blocking I/O (e.g., eventfd write for epoll/io_uring). It must be thread-safe and idempotent. The scheduler only calls it after CAS'ing the carrier state — never spuriously.
 
-   - **Non-blocking poller (spin-poll):** return `false` — the poller never sleeps, so waking it doesn't free the carrier. An active poller calls `maybeYield(false)` on every cycle, which already probes siblings for work to steal — there is no need to wake it.
-   - **Blocking poller (native transport):** track whether you're inside the blocking syscall (e.g. a volatile flag set before `epoll_wait()` and cleared after). Return `true` and send the wakeup signal when the flag is set — this tells the scheduler that waking the poller freed the pinned carrier, so no sibling help is needed. Return `false` when the poller is actively running.
-   - **Loom-friendly poller (NIO):** return `false` — NIO's `select()` parks via Loom, freeing the carrier. The carrier parks in its scheduler loop and is woken via `LockSupport.unpark()`, not via the poller wakeup. See `VirtualIoNioPollerEventLoopGroup`.
+   - **Non-blocking poller (spin-poll):** use a no-op wakeup (`() -> {}`) — the poller never sleeps, so there is nothing to interrupt.
+   - **Blocking poller (native transport):** track whether you're inside the blocking syscall (e.g. a volatile flag set before `epoll_wait()` and cleared after). When the wakeup fires, send the interrupt signal (e.g. eventfd write) if the flag is set. The wakeup is a `Runnable` — it doesn't return a value.
+   - **Loom-friendly poller (NIO):** use a no-op wakeup — NIO's `select()` parks via Loom, freeing the carrier. The carrier parks in its scheduler loop and is woken via `LockSupport.unpark()`, not via the poller wakeup. See `VirtualIoNioPollerEventLoopGroup`.
 
 4. **Never miss a wakeup — if you choose to block.** The simple poller above never blocks, so it doesn't need wakeup coordination. But if you want to block in kernel I/O when idle (to save CPU), the blocking path introduces a coordination problem.
 
-   The blocking decision must be made **inside your transport** — the transport must advertise it's about to sleep (store a flag) before checking `canBlock()` (a load), with a StoreLoad barrier between the two so the load cannot slip before the advertisement. This is the [Seastar sleep/wakeup pattern](https://www.scylladb.com/2018/02/15/memory-barriers-seastar-linux/): the symmetric store-barrier-load on both producer and consumer sides ensures at least one side always sees the other's store.
+   The blocking decision must be made **inside your transport** — the transport must advertise it's about to sleep (store a flag) before checking `canParkPoller()` (a load), with a StoreLoad barrier between the two so the load cannot slip before the advertisement. This is the [Seastar sleep/wakeup pattern](https://www.scylladb.com/2018/02/15/memory-barriers-seastar-linux/): the symmetric store-barrier-load on both producer and consumer sides ensures at least one side always sees the other's store.
 
-   This is how the native transport integration works: `canBlock()` is [injected into the ManualIoEventLoop](core/src/main/java/io/netty/loom/VirtualIoNativePollerEventLoopGroup.java) via override, the transport advertises sleep via a volatile write (`pollerRunning.set(false)`) before reading `canBlock()`, and the wakeup checks that flag to report whether the poller was sleeping (see [netty#15922](https://github.com/netty/netty/issues/15922)):
+   This is how the native transport integration works: `canParkPoller()` is [injected into the ManualIoEventLoop](core/src/main/java/io/netty/loom/VirtualIoNativePollerEventLoopGroup.java) via override, the transport advertises sleep via a volatile write (`pollerRunning.set(false)`) before reading `canParkPoller()`, and the wakeup sends an eventfd write to interrupt the blocked poller (see [netty#15922](https://github.com/netty/netty/issues/15922)):
 
    ```java
-   // inject canBlock into the transport
+   var pollerRunning = new AtomicBoolean(false);
+
    var eventLoop = new ManualIoEventLoop(parent, null, handlerFactory) {
        @Override
        public boolean canBlock() {
-           return scheduler.canBlock();
+           return scheduler.canParkPoller();
        }
    };
 
    scheduler.registerPinnedPoller(
-       () -> {              // wakeup: return true if poller was sleeping
-           if (!pollerRunning.get()) {
-               eventLoop.wakeup();
-               return true;
-           }
-           return false;
-       },
+       () -> eventLoop.wakeup(),    // wakeup: interrupt blocking I/O
        () -> {
+           pollerRunning.set(true);
            boolean canBlock = false;
            while (!eventLoop.isShuttingDown()) {
-               int events = canBlock
-                   ? eventLoop.run(MAX_WAIT_NS, YIELD_NS)
-                   : eventLoop.runNow(YIELD_NS);
+               int events;
+               if (canBlock && scheduler.tryParkPoller()) {
+                   pollerRunning.set(false);
+                   try {
+                       events = eventLoop.run(MAX_WAIT_NS, YIELD_NS);
+                   } finally {
+                       pollerRunning.set(true);
+                       scheduler.unpark();
+                   }
+               } else {
+                   events = eventLoop.runNow(YIELD_NS);
+               }
                boolean hadVtWork = scheduler.maybeYield(events > 0);
                canBlock = events == 0 && !hadVtWork;
            }
@@ -284,11 +291,17 @@ A pinned poller has three responsibilities:
    );
    ```
 
-   Between `canBlock()` returning true and the transport entering its blocking syscall, work may arrive and the scheduler calls `wakeup()`. That signal must not be lost. Two approaches:
+   A blocking poller must follow three steps:
+
+   1. **`tryParkPoller()`** — transitions the carrier to PARKED. If it returns `false`, do a non-blocking poll instead.
+   2. **`canParkPoller()`** (via `canBlock()`) — called by the transport right before the actual blocking syscall. Verifies the carrier is still PARKED and no work arrived. Between `tryParkPoller()` and the blocking call, the poller VT may be transiently descheduled (e.g. contended lock), during which the carrier loop can reset PARKED to RUNNING. If `canParkPoller()` returns `false`, the transport must skip the blocking syscall and do a non-blocking poll — the poller loop will call `unpark()` and retry on the next iteration.
+   3. **`unpark()`** — called immediately after waking from blocking I/O. Resets the carrier state and handles any pending directed-steal signals.
+
+   Beyond the state check, the wakeup signal itself must not be lost. Two approaches:
 
    **Permit-based (lock-free):** The transport's wakeup is sticky — if called before the blocking call starts, the blocking call returns immediately. Examples: `eventfd` (stays readable until consumed), `Selector.wakeup()` (sets a flag), `LockSupport.unpark()` (stores a permit). This is what Netty's transports use.
 
-   **Lock-based (rendezvous):** The `canBlock()` check and the blocking wait happen inside a lock shared with `wakeup()`. The signal cannot slip between the check and the wait. Note: `Condition.signal()` is **not** sticky — if it arrives before `Condition.await()`, it's lost. The queue-empty check must be inside the locked region.
+   **Lock-based (rendezvous):** The `canParkPoller()` check and the blocking wait happen inside a lock shared with `wakeup()`. The signal cannot slip between the check and the wait. Note: `Condition.signal()` is **not** sticky — if it arrives before `Condition.await()`, it's lost. The queue-empty check must be inside the locked region.
 
    For background on why this coordination is subtle, see:
    - [Seastar's memory barrier approach](https://www.scylladb.com/2018/02/15/memory-barriers-seastar-linux/) — the symmetric store-barrier-load pattern between producer and consumer
@@ -296,7 +309,7 @@ A pinned poller has three responsibilities:
    - [Viktor Klang's actor](https://gist.github.com/viktorklang/2557678) — the atomic-flag-with-recheck pattern
 
 Additional constraints:
-- `canBlock()` is a snapshot — it can go stale immediately. Never cache the result.
+- `canParkPoller()` verifies the carrier is still PARKED and no work is pending. It is a snapshot — never cache the result.
 - One poller per carrier. `registerPinnedPoller` throws if a poller is already registered.
 
 For a deeper look at the store-barrier-load protocol, JCStress proofs that the guard prevents missed wakeups (and that removing it causes 94% signal loss), and the [`BlockingPollGuard`](concurrency-tests/src/main/java/io/netty/loom/concurrent/BlockingPollGuard.java) utility that encapsulates it, see [`concurrency-tests/README.md`](concurrency-tests/README.md).
@@ -315,9 +328,6 @@ trade-offs, work stealing tuning, and FJP comparison with benchmark commands.
 | `io.netty.loom.idleSpins` | `0` | Idle spin iterations before blocking. When >0, the poller spins this many iterations (calling `Thread.onSpinWait()`) before entering the blocking I/O path. Prevents batch formation at the cost of higher CPU usage below saturation. **The effective spin duration depends on the transport:** each iteration includes a non-blocking I/O poll — measured at ~0.42µs for epoll (syscall) and ~0.05µs for io_uring (shared-memory CQ peek) under continuous spinning. So 256 spins ≈ 108µs with epoll but only ~13µs with io_uring. The same spin count is not interchangeable across transports. |
 | `io.netty.loom.resumed.continuations` | `1024` | Initial MPSC queue capacity |
 | `io.netty.loom.workstealing.enabled` | `false` | Enable work stealing (experimental) |
-| `io.netty.loom.workstealing.unresponsive.ms` | `200` | Time without a scheduling checkpoint before a carrier is considered unresponsive |
-| `io.netty.loom.workstealing.wake.queue` | `8` | Queue depth above which `execute()` wakes an idle sibling via eventfd. Higher = fewer wakeup syscalls but slower reaction to imbalance. |
-| `io.netty.loom.workstealing.steal.queue` | `2` | Queue depth above which an already-awake carrier considers a sibling worth stealing from. Lower = more aggressive load balancing at no syscall cost. |
 
 ## Work stealing (experimental)
 
@@ -326,21 +336,6 @@ threads from their run queues. It is **opt-in** and designed around a
 **locality-first** principle.
 
 Enable with `-Dio.netty.loom.workstealing.enabled=true`.
-
-### Steal vs wake thresholds
-
-Two separate queue depth thresholds control different decisions with different costs:
-
-- **`steal.queue` (default 2):** used by `tryStealing()` when an already-awake carrier
-  probes siblings for work. This is cheap — just a queue size check, no syscall. A low
-  threshold means idle carriers steal aggressively, improving load balancing.
-- **`wake.queue` (default 8):** used by `execute()` to decide whether to call
-  `wakeIdleSibling()`. This is expensive — it writes to an eventfd to wake a sleeping
-  carrier. A higher threshold avoids unnecessary wakeup syscalls while still reacting
-  to sustained overload.
-
-The asymmetry reflects the cost difference: probing is free (the stealer is already
-running), waking requires a syscall.
 
 ### Locality-first principle
 
@@ -354,152 +349,271 @@ completes and calls `channel.writeAndFlush()`, the write goes to the home carrie
 event loop task queue — a cross-carrier hop. When the VT yields or blocks, its
 continuation routes back to the home carrier's MPSC queue (non-sticky stealing).
 
-This is why stealing is **reluctant**:
-- Only steal from carriers that are genuinely not making progress (unresponsive >200ms
-  or queue depth >10) — never from a carrier that's actively draining its own work.
-- Only steal when idle (no local VTs, no I/O work) — never interrupt useful work to
-  help a sibling.
-- Power-of-2 random probing — O(1), no scan, minimal sibling interaction on the hot path.
+This is why stealing is **reluctant** — only steal when idle, only from siblings
+with queued work. The design is **topology-aware**: when `LinuxCarrierTopology` is
+enabled, carriers are grouped by LLC cluster and siblings are ordered by proximity.
 
-The design is **topology-ready**: when CPU topology awareness is added (NUMA nodes,
-LLC groups), the siblings array can be ordered by proximity. `tryStealing()` and
-`wakeIdleSibling()` would naturally prefer nearby carriers — steal from the closest
-overloaded sibling first, wake the closest idle sibling.
+### Sources of inspiration
 
-This contrasts with Go and ForkJoinPool, which signal on **every** goroutine/task
-creation (see [sibling wake research](#queue-order-fifo-everywhere)). Their tasks have
-no home — they run anywhere with equal efficiency. Our VTs have carrier affinity,
-so aggressive stealing would trade locality for load balance. We only trade when
-the carrier genuinely cannot help itself.
+The protocol is a hybrid of ideas from three systems, adapted for our unique
+constraint: **carriers have a primary job (I/O + own queue), and work stealing
+is opt-in**.
 
-### Why power-of-2 choices
+**Go runtime (`src/runtime/proc.go`):**
+- The `nmspinning` counter and `wakep()` protocol inspired our per-cluster
+  `nSearching` counter with CAS 0→1 admission control.
+- Go's dual-sided `#StoreLoad` barrier protocol (submitters check `nmspinning`,
+  spinners re-check all queues after decrementing) ensures signals are never
+  lost. Our `tryStartSearcher` + `signalWorkFor` follows the same principle.
+- Go allows up to `GOMAXPROCS/2` concurrent spinners; we cap at 1 per cluster.
+  Go's workers have no primary job — spinning is their idle state. Our carriers
+  should be doing I/O, not scanning.
+- Known issues in Go's protocol: [#43997](https://github.com/golang/go/issues/43997)
+  (non-spinning Ms spin uselessly — 12% wall-time reduction when fixed),
+  [#13527](https://github.com/golang/go/issues/13527) (Gosched causes futex
+  thrashing — 5% CPU wasted on futex calls).
+- See: [Scalable Go Scheduler Design](https://go.dev/s/go11sched) by Dmitry Vyukov.
 
-Victim selection for both stealing and sibling waking uses **power-of-2 random
-probing**: pick 2 random siblings, choose the better candidate. This gives
-near-optimal selection with O(1) cost — no scanning, no shared data structure,
-no contention between concurrent stealers.
+**ForkJoinPool (`java.util.concurrent.ForkJoinPool`):**
+- FJP uses a Treiber stack (LIFO) for idle workers — O(1) CAS pop to wake
+  the most-recently-parked worker (cache-warm). We use an `IdleCarrierTracker`
+  bitmap instead, which supports topology-aware waking (`wakeFirstIdle` can
+  prefer nearby carriers).
+- FJP has **no nSearching counter** — all idle workers scan simultaneously
+  with randomized exhaustive strides. Contention is managed by natural backoff
+  and deactivation, not admission control. This works because FJP workers
+  exist only to steal; our carriers have I/O to do.
+- FJP gates steal-signal propagation: `signalWork()` after a steal fires only
+  when `prevSrc != src` (first steal from a new queue) AND the queue still has
+  items. For VT tasks (`noUserHelp() != 0`), propagation is unconditional.
+  Our `signalWorkFor` after a steal is currently unconditional.
+- FJP annotates hot fields with `@Contended` for false-sharing protection:
+  `ctl` (the idle stack + counters), and WorkQueue's `phase`, `source`,
+  `parking`, `stackPred`, `top`, `nsteals`. Our `ClusterState.nSearching`
+  has no padding — a known gap.
+- References: Chase and Lev (SPAA 2005), Michael-Saraswat-Vechev (PPoPP 2009),
+  Le-Pop-Cohen-Nardelli (PPoPP 2013).
 
-From a scalability perspective (Neil Gunther's Universal Scalability Law), the
-coherency penalty grows with the number of parties contending on shared state.
-Scanning all N siblings on every steal attempt means N volatile reads per attempt
-× M concurrent stealers = O(N×M) coherency traffic. With 128 carriers, this
-dominates. Power-of-2 reduces it to O(1) per attempt — two reads, no shared
-counter, no CAS on a central structure. ForkJoinPool avoids scanning with a
-Treiber stack (O(1) CAS pop), but requires a shared atomic. Power-of-2 has
-**zero shared contention** — each stealer reads two independent sibling queues.
+**Danny Thomas's cluster-aware experiments:**
+- [virtual-threads-cluster-aware](https://github.com/DanielThomas/virtual-threads-cluster-aware)
+  on the [loom-dev mailing list](https://mail.openjdk.org/pipermail/loom-dev/2024-September/007161.html)
+  (September 2024). His `CHOOSE_TWO` placement strategy — power-of-2 choices for
+  selecting the least loaded cluster — delivered ~29% more throughput than the default
+  FJP scheduler on an AMD EPYC 9R14 (CCX-clustered L3 caches).
 
-The approach is validated by Danny Thomas's
-[virtual-threads-cluster-aware](https://github.com/DanielThomas/virtual-threads-cluster-aware)
-experiments on the [loom-dev mailing list](https://mail.openjdk.org/pipermail/loom-dev/2024-September/007161.html)
-(September 2024). His `CHOOSE_TWO` placement strategy — power-of-2 choices for
-selecting the least loaded cluster — delivered ~29% more throughput than the default
-FJP scheduler while using significantly less CPU on an AMD EPYC 9R14 (CCX-clustered
-L3 caches). The results demonstrate that topology-aware power-of-2 selection is a
-practical, low-overhead alternative to full scanning or centralized queue structures.
+### Why limit searchers at all
 
-### How it works
+The naive approach — wake an idle thread every time a goroutine/VT is readied —
+leads to **excessive thread parking/unparking**. Go's runtime
+[documents this explicitly](https://github.com/golang/go/blob/go1.24.4/src/runtime/proc.go#L21-L109):
 
-```mermaid
-sequenceDiagram
-    participant A as Carrier A (overloaded)
-    participant Q as A's MPSC Queue
-    participant B as Carrier B (idle)
+> *Three rejected approaches that would work badly: [...] (3) Unpark an additional
+> thread whenever we ready a goroutine and there is an idle P, but don't do handoff.
+> This would lead to excessive thread parking/unparking as the additional threads
+> will instantly park without discovering any work to do.*
 
-    Note over A: Poller busy with I/O
-    A->>A: maybeYield(hadIoWork=true)
-    Note over A: Skip steal — has I/O work
+Go's solution: maintain at least one **spinning** thread (searching for work). If a
+spinner already exists (`nmspinning > 0`), don't wake another — the existing spinner
+will discover the work. When the last spinner finds work and stops spinning, it wakes
+a replacement. This *"smooths out unjustified spikes of thread unparking, but at the
+same time guarantees eventual maximal CPU parallelism utilization."*
 
-    Note over B: Poller idle — no I/O events
-    B->>B: maybeYield(hadIoWork=false)
-    B->>Q: tryStealing() — probe 2 random siblings
-    Note over Q: [vt1, vt2, vt3]
-    Q-->>B: steal vt1 (ticket lock CAS)
-    B->>B: offer vt1 to local queue
-    B->>B: Thread.yield() → carrier drains vt1
-    Note over B: vt1 runs on B, routes back to A on yield
+Our `nSearching` counter serves the same purpose: prevent wakeup storms. If a search
+is already in flight (CAS 0→1 succeeded), additional `signalWorkFor` calls are
+suppressed. When the searcher completes, the chain propagates if the victim still has
+work. One searcher at a time, sequential recruitment — no thundering herd.
+
+The trade-off: with nSearching=1 per cluster, only one victim gets push-path help
+at a time. If multiple carriers in the same cluster are overloaded, redistribution
+is serialized. Whether this matters depends on how often multiple victims coexist —
+we don't have data on this yet. A direct signal: how often `tryStartSearcher` fails
+(CAS 0→1 returns false) while a different carrier needs help.
+
+### Searcher limits: us vs Go vs FJP
+
+All three systems must answer: how many threads should actively search for
+stealable work? Too few delays redistribution; too many wastes CPU on
+fruitless scanning.
+
+| Aspect | This scheduler | Go runtime | ForkJoinPool |
+|--------|---------------|------------|--------------|
+| **Push path limit** | `nSearching` CAS(0→1) — 1 per cluster | `wakep()` CAS(0→1) — 1 at a time | `signalWork()` pops Treiber stack — 1 at a time |
+| **Ongoing searchers** | Strictly 0 or 1 | Dynamic: `2*nmspinning < busy_procs` | No limit — all idle workers scan |
+| **Chain propagation** | `signalWorkFor(victim)` after steal | "Last spinner wakes next" via `wakep()` | `signalWork()` after steal if `prevSrc != src` |
+| **Scan strategy** | Power-of-2 random (O(1), 2 siblings) | Coprime enumeration of ALL Ps, 4 passes | Coprime stride over ALL queues |
+| **Directed steal** | Yes — victim encoded in `SEARCHING+id` | No — spinners scan all queues | No — workers scan all queues |
+| **Pull path (separate)** | `tryStealing` in `maybeYield` — no limit | None — all stealing via `findrunnable` | None — all stealing via `runWorker` scan |
+
+**Key finding: Go's `wakep()` is also CAS(0→1).** It wakes exactly one spinner,
+just like our `tryStartSearcher`. The difference is how spinners *persist*: Go's
+`findrunnable()` allows an M to *become* spinning if `2*nmspinning < (gomaxprocs -
+npidle)` — a soft, racy inequality check, not a CAS. Multiple Ms can pass this
+check simultaneously, so `nmspinning` can briefly exceed the target. Our counter
+is strictly 0 or 1 at all times. (Go source:
+[`wakep` CAS(0,1)](https://github.com/golang/go/blob/go1.24.4/src/runtime/proc.go#L3117),
+[`findrunnable` spinning check](https://github.com/golang/go/blob/go1.24.4/src/runtime/proc.go#L3384).)
+
+**FJP has no limit at all.** All idle workers scan simultaneously with randomized
+coprime strides that visit every queue. Workers back off naturally via `deactivate()`
+spin + `awaitWork()` park. No counter tracks how many are scanning. (FJP source at
+Loom `dc6f316e036`: [`signalWork` L1871](https://github.com/openjdk/loom/blob/dc6f316e036/src/java.base/share/classes/java/util/concurrent/ForkJoinPool.java#L1871),
+[`scan:` loop L1986](https://github.com/openjdk/loom/blob/dc6f316e036/src/java.base/share/classes/java/util/concurrent/ForkJoinPool.java#L1986),
+[`deactivate` L2042](https://github.com/openjdk/loom/blob/dc6f316e036/src/java.base/share/classes/java/util/concurrent/ForkJoinPool.java#L2042).)
+
+**Why our approach differs:** our carriers have a **dedicated I/O loop** — each
+carrier owns a pinned poller VT bound to a specific epoll/io_uring fd. Stealing
+competes with I/O polling for carrier time. Go's Ms also do I/O polling, but
+via a **shared** netpoller (`netpoll()` in `findrunnable()`) — any M can poll
+it and it returns ready goroutines from all fds. There is no per-M epoll fd.
+FJP workers don't poll at all (Netty I/O runs on separate platform threads).
+In both Go and FJP, scanning for steals is a natural part of the idle path,
+not competing with a dedicated per-thread I/O responsibility.
+We use two independent paths:
+
+- **Push (nSearching=1):** directed steal from a known victim. The searcher knows
+  exactly where to look — no scanning needed. Chain propagation recruits the next
+  searcher sequentially. O(N) recruitment for N idle carriers, but O(1) per steal.
+- **Pull (tryStealing, no limit):** every idle poller iteration probes siblings via
+  power-of-2. This runs independently of nSearching — unlimited concurrent probes,
+  same as FJP in spirit.
+
+The total steal activity is: 1 directed + N pull probes per idle cycle (where N =
+idle pollers with `!hadIoWork`). This is comparable to or more permissive than Go
+(which subjects ALL stealing to the nmspinning check) — just structured differently.
+
+**Trade-offs:**
+
+| | Pro | Con |
+|---|---|---|
+| **nSearching=1** | Low contention on victim's ticket lock; directed steal = no wasted scans | Multiple overloaded carriers in same cluster: only one gets help at a time via push path |
+| **Go nmspinning** | Dynamic limit scales with load; dual-sided barrier prevents missed signals | Known issues: [#43997](https://github.com/golang/go/issues/43997) (12% CPU wasted on useless spinning), [#13527](https://github.com/golang/go/issues/13527) (futex thrashing) |
+| **FJP unlimited** | Fastest convergence — all idle workers scan simultaneously | Highest contention on victim queues; mitigated by `@Contended` padding and LIFO stack |
+
+**Open question:** should `nSearching` be raised to allow multiple directed steals
+simultaneously (e.g., two overloaded carriers each recruiting a helper)? The current
+pull path compensates, but the push path's sequential chain is a bottleneck when
+multiple victims exist. Benchmarking at 16+ carriers with uneven load would reveal
+whether this matters in practice.
+
+### The nSearching protocol
+
+The protocol has two paths: **push** (directed, from submissions) and **pull**
+(speculative, from idle pollers).
+
+**Push path — nSearching + directed steal:**
+
+When a carrier has work submitted via `execute()` and the carrier is already
+running (not just woken):
+
+```
+execute(task):
+    runQueue.offer(task)
+    if (submitter != carrierThread):
+        if (submitter.runningScheduler != this):
+            wakeup()  // wake target from blocking I/O
+        else if (WORK_STEALING_ENABLED):
+            signalWork()  // recruit a sibling to help
 ```
 
-The scheduler checkpoint is `maybeYield(hadIoWork)`. The pinned poller calls it
-between I/O phases and reports whether it processed events:
+`signalWork()` → `signalWorkFor(victim)`:
+1. `tryStartSearcher()` — CAS 0→1 on per-cluster `nSearching`. Fails if a
+   search is already in progress (at most 1 concurrent searcher per cluster).
+2. `wakeFirstIdle(group, victim)` — scan idle bitmap for a PARKED carrier.
+   If found: `wakeupAsSearcher(victim)` — CAS(PARKED → SEARCHING+victim.id)
+   + `LockSupport.unpark` + poller eventfd write.
+3. If no idle carrier: `stoppedSearching()` (release the nSearching token).
 
-- **`hadIoWork=true`**: the poller has I/O to process. Only yields for local VT
-  preemption. No stealing — the carrier is doing useful work.
-- **`hadIoWork=false`**: the poller is idle. The scheduler checks siblings for
-  stealable work via power-of-2 random probing (O(1), no scan).
+The woken carrier processes `SEARCHING+victim.id` via `handleSearchWake`:
+1. Steal one task from the encoded victim.
+2. `stoppedSearching()` — release the nSearching token.
+3. If the victim still has work: `signalWorkFor(victim)` — recruit the next
+   searcher (chain propagation).
+4. Run the stolen task (inline from carrier loop, queued from poller VT).
 
-A sibling qualifies as a steal victim when `needsHelp()` returns true:
-- **Unresponsive with work**: no scheduling checkpoint reached in >200ms **and**
-  the run queue is non-empty. The carrier is stuck running a long VT while
-  other continuations wait. An unresponsive carrier with an empty queue (e.g.
-  idle/parked or blocking in kernel I/O) is not a steal victim — there is
-  nothing to steal.
-- **Overloaded**: the run queue exceeds the threshold (default 10). A burst of VT
-  submissions is piling up faster than the carrier can drain.
+**Pull path — speculative stealing from `maybeYield`:**
 
-Stolen tasks go to the stealer's local queue. The poller yields naturally via
-`hasRunnableContinuations()` and the carrier drains the stolen VT.
+When the pinned poller has no I/O work:
 
-### What "unresponsive" means
+```
+maybeYield(hadIoWork=false):
+    if (hasRunnableContinuations()):
+        Thread.yield()  // drain local work first
+    else:
+        tryStealing(false)  // probe siblings
+```
 
-Each carrier maintains a **scheduler heartbeat** — a nanosecond timestamp updated
-via `setOpaque` at every scheduling checkpoint:
+`tryStealing` uses **power-of-2 random probing**: pick 2 random siblings,
+choose the one with more queued work (`worthStealing()` — non-empty queue).
+After a successful steal, `signalWorkFor(victim)` fires if the victim still
+has work — connecting the pull path to the push protocol.
 
-- After each VT continuation completes (in `runContinuation()`, after `task.run()` returns)
-- At every `maybeYield(hadIoWork)` call (the poller's scheduling checkpoint)
-- Before and after carrier park (in `virtualThreadSchedulerLoop()`)
+**Carrier state machine:**
 
-A carrier is **unresponsive** when `System.nanoTime() - heartbeat > threshold`
-(default 200ms). This means the carrier hasn't reached any scheduling checkpoint
-in that time. Three cases:
+```
+              tryPark()          wakeup()
+  RUNNING(0) ───────→ PARKED(1) ───────→ RUNNING(0)
+                  │                           ↑
+                  │   wakeupAsSearcher()       │
+                  └──→ SEARCHING(2+id) ────────┘
+                           │        unparkImpl()
+                           └── handleSearchWake()
+                                → steal from victim
+                                → stoppedSearching()
+```
 
-- **Stuck on a long VT**: the carrier is inside `task.run()` for a VT that runs
-  for >200ms without yielding. No checkpoint is reachable because the carrier
-  is inside `task.run()`.
-- **Blocking in kernel I/O**: the poller entered `epoll_wait` (idle, no events).
-  The heartbeat was updated when the poller last called `maybeYield()`, but no
-  further checkpoints occur while sleeping. After 200ms the carrier becomes
-  unresponsive. Note: a blocking carrier always has an empty queue
-  (`canBlock()` requires it), so nothing can be stolen FROM it. But it
-  can be woken via `wakeup()` to help steal from others.
-- **Poller descheduled**: the poller VT is parked on something other than I/O
-  (e.g. a `CountDownLatch`). The carrier has nothing to run — no VTs, no
-  pinned continuation — and tries to steal before parking. This lets a carrier
-  with a registered-but-descheduled poller help an overloaded sibling.
-- **Carrier parked** (no poller): the carrier touches the heartbeat immediately
-  before parking and again after waking, mirroring the poller's pattern. A
-  recently-parked carrier appears responsive — only after the threshold elapses
-  while parked does it become unresponsive.
+**Invariant:** every `tryStartSearcher()` success (CAS 0→1) is matched by
+exactly one `stoppedSearching()` decrement — either from `signalWorkFor`
+(no idle carrier found) or from `handleSearchWake` (steal processed).
 
-### Submission paths and when help is requested
+The carrier loop eagerly checks for pending SEARCHING state at the top of
+each iteration, ensuring directed steals are never delayed when the carrier
+has local work to drain.
 
-Virtual thread continuations arrive in `execute()` from two sources:
+### Submission paths
+
+Virtual thread continuations arrive in `execute()` from three sources:
 
 **External submissions** (from a different carrier or a platform thread):
 - The submitter's `runningScheduler()` differs from the target → `wakeup()` fires
   to interrupt the target's blocking I/O or unpark its carrier.
-- If `wakeup()` returned false (carrier was not sleeping) and the target
-  `needsHelp()` (unresponsive or overloaded) → `wakeIdleSibling()` wakes a random
-  idle sibling to come steal.
+- If `wakeup()` failed (carrier was not sleeping) → `signalWork()` recruits an
+  idle sibling via the nSearching protocol.
 
 **Internal submissions** (a VT running on this carrier submits to the same carrier):
 - The submitter's `runningScheduler()` matches → no self-wakeup needed.
-- If the carrier `needsHelp()` → `wakeIdleSibling()` still fires. This covers the
-  case where a VT monopolizes a carrier and spawns many children: the carrier is
-  stuck running the parent VT while children pile up in the queue. An idle sibling
-  is woken to help drain them.
-- Note: the poller VT counts as "internal" here — submissions from Netty handlers
-  (channelRead → vThreadFactory → start) come from the poller VT, which has
-  `runningScheduler() == this`. No self-wakeup fires, but `needsHelp()` is checked.
+- `signalWork()` still fires — covers the case where a VT monopolizes a carrier
+  and spawns many children. An idle sibling is recruited to help.
 
 **Yield / re-enqueue** (onContinue path, runs on the carrier thread itself):
 - Skipped entirely — the carrier thread is actively draining, no wakeup or help
-  request needed. The carrier will pick up the re-enqueued continuation on its
-  next drain cycle.
+  needed. The carrier will pick up the re-enqueued continuation on its next
+  drain cycle.
 
-`wakeIdleSibling()` uses power-of-2 random probing: pick 2 random siblings, try
-`wakeup()` on the first — if it was actually idle (poller blocking or carrier
-parked), the wakeup fires and returns true. If the first was busy, try the second.
-This avoids scanning all siblings (O(1) regardless of carrier count).
+### Park/unpark protocol
+
+The carrier uses a **Viktor Klang mini-actor pattern** adapted for park/unpark
+with directed-steal signals:
+
+- `tryPark()`: CAS(RUNNING→PARKED) + markIdle in bitmap + re-check for work.
+  If work arrived between drain and CAS, rolls back atomically. The rollback
+  handles concurrent `wakeupAsSearcher` CAS (TOCTOU via `getAndSet`).
+- `unpark()` / `unparkFromCarrier()`: markActive + `getAndSet(RUNNING)`.
+  If wakeState was SEARCHING, processes `handleSearchWake` — steals from the
+  directed victim. `unparkFromCarrier()` runs the stolen task inline;
+  `unpark()` queues it (for poller VT context where inline execution is
+  not possible).
+
+### Why power-of-2 choices
+
+Victim selection uses **power-of-2 random probing**: pick 2 random siblings,
+choose the better candidate. This gives near-optimal selection with O(1) cost.
+
+From a scalability perspective (Neil Gunther's Universal Scalability Law), the
+coherency penalty grows with the number of parties contending on shared state.
+Scanning all N siblings means N volatile reads × M concurrent stealers = O(N×M)
+coherency traffic. Power-of-2 reduces it to O(1) per attempt — two reads, no
+shared counter. ForkJoinPool avoids scanning with a Treiber stack (O(1) CAS pop),
+but requires a shared atomic. Power-of-2 has **zero shared contention**.
 
 ### Ticket lock: biased consumer coordination
 
@@ -557,6 +671,8 @@ Each event records:
 - `sourceQueueDepth`: how deep the victim's queue was
 - `fromCarrierLoop`: `true` if stolen from the carrier loop, `false` if stolen
   from the pinned poller via `maybeYield`
+- `directed`: `true` if stolen via nSearching directed steal (`handleSearchWake`),
+  `false` if stolen via random `tryStealing` probe
 
 ### What to expect
 
@@ -564,9 +680,113 @@ Each event records:
   drain their own queues. No latency improvement, no regression.
 - **Uneven load** (hot connections, burst patterns): idle carriers help overloaded
   siblings. Tail latency improves for VTs that would otherwise wait on a stuck carrier.
-- **Max throughput**: zero overhead when enabled. The `isEmpty()` fast-path in the
-  ticket lock avoids atomic operations on empty polls. The heartbeat update in
-  `maybeYield` costs one `System.nanoTime()` per checkpoint (~25ns).
+- **Max throughput**: near-zero overhead when enabled. The `isEmpty()` fast-path in
+  the ticket lock avoids atomic operations on empty polls. The nSearching CAS
+  fires from submissions and when the carrier loop finds remaining work after
+  a drain iteration.
+
+## CPU topology awareness
+
+Pins each carrier to its own CPU core and groups carriers by shared L3 cache.
+This eliminates thread migrations and keeps steal coordination within the
+same cache domain.
+
+### How to enable
+
+```
+-Dio.netty.loom.topology=io.netty.loom.topology.LinuxCarrierTopology
+--enable-native-access=ALL-UNNAMED
+```
+
+| Property | Values | Effect |
+|----------|--------|--------|
+| `io.netty.loom.topology` | `io.netty.loom.topology.LinuxCarrierTopology` or absent | Absent (default): carriers float, no pinning. Set: each carrier pinned to a core, clusters discovered from hardware. |
+| `io.netty.loom.workstealing.scope` | `GLOBAL` (default) or `CLUSTER_LOCAL` | `GLOBAL`: steal from any carrier. `CLUSTER_LOCAL`: steal only within the same LLC cluster — avoids cross-CCD/NUMA coherency traffic. |
+
+When enabled, the scheduler:
+1. Reads the process affinity mask (`sched_getaffinity`) to discover available CPUs
+2. Pins each carrier to one CPU via `sched_setaffinity` (one carrier per core)
+3. Reads `/sys/devices/system/cpu/cpu{N}/cache/` to discover LLC clusters
+4. Groups carriers that share an L3 cache into clusters
+
+Carrier thread names reflect the topology: `carrier-0-cluster0-core2`,
+`carrier-1-cluster0-core3`. On an AMD Ryzen 9 7950X (2 CCDs):
+
+```
+L3 cluster 0: CPUs 0-7, 16-23   (8 cores + 8 SMT threads)
+L3 cluster 1: CPUs 8-15, 24-31  (8 cores + 8 SMT threads)
+```
+
+If there are more carriers than available CPUs, extra carriers float with a
+warning logged. If FFM or `sched_setaffinity` is unavailable (e.g., containers
+without native access), the feature degrades gracefully — carriers float and
+all land in a single cluster.
+
+### Why pinning helps
+
+Without pinning, carriers are regular threads that the Linux scheduler (EEVDF)
+can migrate between cores. When a carrier blocks briefly in `epoll_wait` and
+wakes, EEVDF may place it on a different core — or worse, co-place two carriers
+on the same core while another core sits idle. This is the
+["Wasted Cores" problem](https://www.usenix.org/conference/eurosys16/technical-sessions/presentation/lozi)
+(Lozi et al., EuroSys 2016).
+
+The effect on our scheduler: without pinning, each carrier cycles through the
+I/O poll → VT drain loop 247K times in 10 seconds. With pinning: 632K times
+(2.6x more responsive). Each poll finds fewer events (1.6 vs 4.0), and the VT
+queue stays nearly empty (avg depth 1 vs 8). The carrier reacts to each event
+promptly instead of waking up to find accumulated batches.
+
+From [PERFORMANCE.md](PERFORMANCE.md) at 50K req/s, 2 carriers on CPUs 2,3:
+
+| Metric | No pinning | With topology |
+|--------|-----------|---------------|
+| p50 latency | 3.80ms | 1.16ms |
+| IO cycles/10s | 247K | 632K (2.6x) |
+| IO events/cycle | 4.0 | 1.6 |
+| VT queue depth (avg) | 8 | 1 |
+
+The N+1 cores trick (3 cores for 2 carriers, no pinning) achieves similar
+results (p50 1.13ms) by giving the Master-Poller, GC, and JIT their own core
+— eliminating preemption without explicit pinning. See the
+[reproducing section](PERFORMANCE.md#reproducing) for exact commands.
+
+### Interaction with work stealing
+
+Topology and work stealing are independent features that compose well:
+
+| Configuration | p50 (50K, 2 cores) | What it provides |
+|---------------|-------------------|------------------|
+| No WS, no topology | 3.80ms | Baseline |
+| WS only | 2.26ms | Idle carriers help overloaded siblings |
+| Topology only | 1.13ms | Pinning eliminates preemption, keeps queues short |
+| WS + topology | 1.13ms | Both — pinning dominates at 2 cores |
+
+With topology enabled, work stealing's benefit is less visible at small scale
+(2 cores) because pinning already eliminates the preemption problem that causes
+queue buildup. At larger scale (16+ carriers across 2 LLC clusters), work
+stealing redistributes load within a cluster when one carrier is saturated
+while siblings are idle.
+
+When both are enabled and `stealScope` is `CLUSTER_LOCAL`:
+- Each LLC cluster gets its own `ClusterState` — independent `nSearching`
+  counter and idle bitmap. Two clusters can signal and steal in parallel
+  with zero cross-cluster contention.
+- The `siblings` array for each carrier contains only carriers in the same
+  cluster. `tryStealing` power-of-2 probes and `wakeFirstIdle` scans are
+  cluster-local — no cross-LLC traffic for steal coordination.
+- Stolen tasks may still route back to the home carrier's event loop on
+  write (cross-carrier hop), but the steal itself stays within the LLC.
+
+### When to use what
+
+| Deployment | Recommendation |
+|------------|---------------|
+| 1-4 cores, single CCD | Topology optional. Pinning helps if CPU-bound (see [PERFORMANCE.md](PERFORMANCE.md)). |
+| 8+ cores, single CCD/socket | Enable topology. Pinning eliminates migrations and keeps queues short. |
+| Multi-CCD/NUMA (AMD EPYC, Ryzen 7000+) | Enable topology + `CLUSTER_LOCAL` scope. Each LLC cluster steals independently — no cross-CCD coherency traffic. |
+| Containers with CPU limits | Topology works if `--enable-native-access` is allowed. Falls back gracefully if `sched_setaffinity` is denied (carriers float, single cluster). |
+| N+1 cores trick | Alternative to pinning: give carriers one extra core (`--server-cpuset 2,3,4` for 2 carriers). The extra core absorbs GC/JIT/Master-Poller without explicit pinning. See [PERFORMANCE.md](PERFORMANCE.md). |
 
 ## Module structure
 
@@ -583,6 +803,8 @@ All scheduling state (carrier pool singleton, `ScopedValue`, `instanceof` checks
 The JDK loads the scheduler via `Class.forName(cn, true, ClassLoader.getSystemClassLoader())` during `VirtualThread.<clinit>`. This means the bootstrap JAR must be visible to the **system classloader**, not just the application classloader.
 
 If the bootstrap JAR is not on the system classpath (e.g., packaged inside a Spring Boot fat JAR without MRJAR, or only in an app server's per-deployment classloader), the JDK cannot find `NettyScheduler` and the scheduler does not activate. Any attempt to use the scheduler API (`EventLoopSchedulerGroup.instance()`, `VirtualIoNativePollerEventLoopGroup`, etc.) throws `IllegalStateException` — there is no silent fallback.
+
+The **topology JAR** has the same constraint: `-Dio.netty.loom.topology=<classname>` loads the class via `Class.forName` from the bootstrap module, which uses the system classloader. The topology implementation must be on the system classpath alongside the bootstrap JAR.
 
 ## Deployment
 
